# workspace-rust-note2xero

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile_nginx  LICENCE.MD  Makefile  README.md  Rocket.toml  SECURITY.md  get_web_version_from_toml.sh  index.html  rust-toolchain.toml  week52023.csv
.github/workflows/: blank.yml
deploy/builder/: Dockerfile  Dockerfile_arm
deploy/container/: Dockerfile
deploy/kubernetes/: Makefile  noted2xero_deployment.yml  noted2xero_deployment_generated.yml
deploy/kubernetes/kube-settings/: 00-configuration.yaml  01-namespace.yaml  02-deployment-xero-web.yaml  03-deployment-xero-frontend.yaml  04-service-xero-frontend.yaml  05-service-xero-web.yaml  06-ingress-xero-frontend.yaml  Makefile
deploy/kubernetes/kustomize/base/: 00-configuration.yaml  02-deployment-xero-web.yaml  03-deployment-xero-frontend.yaml  04-service-xero-frontend.yaml  05-service-xero-web.yaml  06-ingress-xero-frontend.yaml  ingress-ingress-xero-web.yaml  kustomization.yaml
deploy/kubernetes/kustomize/overlays/mac/: kustomization.yaml  kustomize_generated_script.yml
deploy/local-stack/: docker-compose.yml
deploy/local-stack-arm/: docker-compose.yml
noted2xero_cli/: Cargo.toml
